archive/kubernetes/apps/default/jackett/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  labels:
    app.kubernetes.io/part-of: jackett
    app.kubernetes.io/name: jackett
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/part-of: jackett
    app.kubernetes.io/name: jackett
  ports:
    - name: http
      protocol: TCP
      port: 9117
      targetPort: http
