archive/kubernetes/apps/default/jackett/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "traefik"
    external-dns/is-public: "true"
spec:
  rules:
    - host: jackett.fadhlika.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jackett
                port:
                  name: http
  tls:
    - secretName: jackett-tls
      hosts:
        - jackett.fadhlika.com
